# agentflow

./: .env.example  README.md  main.py  pyproject.toml
.claude/: settings.local.json
agentflow/: cli.py
agentflow/config/: database.py  settings.py
agentflow/entities/: __init__.py  commit.py  session.py  workspace.py
alembic/versions/: __init__.py
apps/cli/: .coverage
apps/cli/src/agentflow/commands/: auth.py  org.py  project.py
apps/cli/src/agentflow/utils/: config.py  output.py  validators.py
apps/cli/tests/: test_config.py  test_org.py  test_project.py  test_validators.py
docs/: AGENT_SYSTEM_DESIGN.md  ARCHITECTURE.md  MVP.md  PROJECT.md  ROADMAP.md  VISION.md  feature-ideas.md  release-0.1.0.md
docs/agent-system/01-concepts/: agents.md  roles.md  tools.md
docs/agent-system/02-organization/: hierarchy.md  permissions.md  trust-score.md
docs/agent-system/03-communication/: logging.md  messages.md  sessions.md
docs/agent-system/04-workflow/: pull-generation.md  tasks.md  workflows.md
docs/agent-system/07-future-features/: 02-time-planning-features.md  06-dx-features.md  07-security-features.md
docs/proposals/: projects-feature.md
docs/version/0.1.0/: ANALYSIS.md
docs/version/0.1.0/cli/: README.md  agent-cli.md  agents.md  authentication.md  cli.md.backup  commands-outline.md  context.md  errors.md  organizations.md  overview.md  projects.md  quick-reference.md  response-format.md  roles.md  tasks.md  versions.md  workflow.md
tests/: __init__.py  test_commit.py  test_session.py
tmp/: AUTH_OVERVIEW.md
